# OscilloGenerator

./: .gitignore
OscilloScope/: CMakeLists.txt  deviceAccessPage.cpp  deviceAccessPage.h  importFilePage.cpp  importFilePage.h  mainwindow.cpp  mainwindow.h  resultsPage.cpp  resultsPage.h
